...
import com.antonio.samir.meteoritelandingsspots.R
import com.antonio.samir.meteoritelandingsspots.designsystem.ui.components.Loading
import com.antonio.samir.meteoritelandingsspots.designsystem.ui.components.MessageError
import com.antonio.samir.meteoritelandingsspots.designsystem.ui.components.MeteoriteItem
import com.antonio.samir.meteoritelandingsspots.designsystem.ui.components.MeteoriteItemView

const val TAG_METEORITE_LIST = "meteorite_list"
private const val ITEM_CONTENT_TYPE = "meteorite"

@Composable
fun MeteoriteList(
    items: LazyPagingItems<MeteoriteItemView>,
    scrollState: LazyListState,
...
